force-app/main/default/objects/Product_Launch_Survey__c/Product_Launch_Survey__c.object-meta.xml
<CustomObject>
    <label>Product Launch Survey</label>
    <nameField>
        <displayFormat>PLS-{00000000}</displayFormat>
        <label>Product Launch Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Launch Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>