force-app/main/default/objects/Product_Launch_Survey__c/fields/Enrolee_2_Info__c.field-meta.xml
<CustomField>
    <fullName>Enrolee_2_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrolee 2 Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>