force-app/main/default/objects/Product_Launch_Survey__c/fields/Enrolee_9_Info__c.field-meta.xml
<CustomField>
    <fullName>Enrolee_9_Info__c</fullName>
    <label>Enrolee 9 Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>