force-app/main/default/objects/Product_Launch_Survey__c/fields/Enrolled_Employees__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Employees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrolled Employees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>